finished the exercices

--- a/exercises/11-nested-tags/index.html
+++ b/exercises/11-nested-tags/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>4Geeks Academy</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<h1>Hello World. <i>Italic Word.</i></h1>
+		<h1>
+			Hey Hey hey
+			<p>Hello</p>
+		</h1>
+		<p>This is an exercise about html that im doing bc it is required so here it is</p>
+		<a href=""> <h2>Hola</h2></a>
+	</body>
 </html>
