--- a/.learn/resets/09-formating-Text/index.html
+++ b/.learn/resets/09-formating-Text/index.html
@@ -2,9 +2,15 @@
 <html>
 	<head>
 		<title>4Geeks Academy</title>
+		<style>
+			blockquote {
+				border-left: 2px solid red;
+				background: #fbfbfb;
+				padding: 5px;
+			}
+		</style>
 	</head>
 	<body>
 		<!-- your code here -->
-		<iframe height="200" width="300" src="https://www.youtube.com/embed/hFQiSDiysWs"></iframe>
 	</body>
 </html>
