--- a/exercises/10-replicate-html/index.html
+++ b/exercises/10-replicate-html/index.html
@@ -4,6 +4,22 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-        <!-- your code here -->
+		<h1>The learning essay</h1>
+		<h2>3 reasons you know you are learning</h2>
+		<p>
+			We are gooing to explain in this paragraphs the 3 most common signs that you should look into yourself to recognize if you are learning.
+		</p>
+		<ul>
+			<li>You are able to complete this ex by yourself.</li>
+			<li>You understand what the teacher is talking about.</li>
+			<li>You are able to have conversations about the topic.</li>
+		</ul>
+		<h2>3 reasons you know you are learning</h2>
+		<li>Time passes fast.</li>
+		<li>You are anxious to finish this exercise and start the next one.</li>
+		<li>Its 12 am and you don't want to go to sleep.</li>
+		<p>If you can't sleep, try watching cat videos <a href="https://www.youtube.com/watch?v=HsrdCP_dxS0" target="blank"> Click here</a></p>
+
+		<!-- your code here -->
 	</body>
 </html>
